--- a/src/pack/Busca.form
+++ b/src/pack/Busca.form
@@ -58,9 +58,9 @@
                       <Group type="102" attributes="0">
                           <Component id="jScrollPane1" min="-2" pref="352" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="btnCheckIn" min="-2" pref="150" max="-2" attributes="0"/>
-                              <Component id="btnCheckOut" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="btnCheckOut" max="32767" attributes="0"/>
+                              <Component id="btnCheckIn" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace pref="71" max="32767" attributes="0"/>
                       </Group>
